--- a/Shrek2ModdingSDK/Shrek2ModdingSDK/Shrek2ModdingSDK.vcxproj
+++ b/Shrek2ModdingSDK/Shrek2ModdingSDK/Shrek2ModdingSDK.vcxproj
@@ -153,6 +153,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Shrek2Functions.h" />
     <ClInclude Include="Shrek2ModdingSDK.h" />
     <ClInclude Include="Shrek2Memory.h" />
     <ClInclude Include="Shrek2.h" />
@@ -160,6 +161,7 @@
     <ClInclude Include="Shrek2Utils.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Shrek2Functions.cpp" />
     <ClCompile Include="Shrek2Memory.cpp" />
     <ClCompile Include="Shrek2.cpp" />
     <ClCompile Include="Shrek2Pointers.cpp" />
