--- a/Shrek2ModdingSDK/Shrek2ModdingSDK/Shrek2ModdingSDK.vcxproj
+++ b/Shrek2ModdingSDK/Shrek2ModdingSDK/Shrek2ModdingSDK.vcxproj
@@ -153,6 +153,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Shrek2Events.h" />
     <ClInclude Include="Shrek2Maps.h" />
     <ClInclude Include="Shrek2Functions.h" />
     <ClInclude Include="Shrek2ModdingSDK.h" />
@@ -162,6 +163,7 @@
     <ClInclude Include="Shrek2Utils.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Shrek2Events.cpp" />
     <ClCompile Include="Shrek2Maps.cpp" />
     <ClCompile Include="Shrek2Functions.cpp" />
     <ClCompile Include="Shrek2Memory.cpp" />
