--- a/Shrek2ModdingSDK/Shrek2ModLoader/Shrek2ModLoader.vcxproj
+++ b/Shrek2ModdingSDK/Shrek2ModLoader/Shrek2ModLoader.vcxproj
@@ -76,6 +76,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <OutDir>C:\Users\Kevin\Games\Shrek 2 Modding Folder\System\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
