--- a/Shrek2ModdingSDK/Shrek2TestMod/Shrek2TestMod.vcxproj.filters
+++ b/Shrek2ModdingSDK/Shrek2TestMod/Shrek2TestMod.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="framework.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="dllmain.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
