--- a/Shrek2ModdingSDK/Shrek2ModdingSDK/Shrek2ModdingSDK.vcxproj
+++ b/Shrek2ModdingSDK/Shrek2ModdingSDK/Shrek2ModdingSDK.vcxproj
@@ -126,7 +126,7 @@
     <Lib>
       <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <IgnoreSpecificDefaultLibraries>libci.lib;%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
-      <AdditionalDependencies>legacy_stdio_definitions.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>legacy_stdio_definitions.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -173,6 +173,7 @@
     <ClInclude Include="Shrek2.h" />
     <ClInclude Include="Shrek2Pointers.h" />
     <ClInclude Include="Shrek2Rect.h" />
+    <ClInclude Include="Shrek2Sound.h" />
     <ClInclude Include="Shrek2Texture.h" />
     <ClInclude Include="Shrek2Textures.h" />
     <ClInclude Include="Shrek2UI.h" />
@@ -186,6 +187,7 @@
     <ClCompile Include="Shrek2.cpp" />
     <ClCompile Include="Shrek2Pointers.cpp" />
     <ClCompile Include="Shrek2Rect.cpp" />
+    <ClCompile Include="Shrek2Sound.cpp" />
     <ClCompile Include="Shrek2Texture.cpp" />
     <ClCompile Include="Shrek2Textures.cpp" />
     <ClCompile Include="Shrek2UI.cpp" />
