--- a/Shrek2ModdingSDK/Shrek2ModSetup/Shrek2ModSetup.vcxproj
+++ b/Shrek2ModdingSDK/Shrek2ModSetup/Shrek2ModSetup.vcxproj
@@ -79,6 +79,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <TargetName>Shrek 2 Mod Setup</TargetName>
+    <OutDir>C:\Users\Kevin\Games\Shrek 2 Modding Folder\System\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
