--- a/Shrek2ModdingSDK/Shrek2TestMod/Shrek2TestMod.vcxproj
+++ b/Shrek2ModdingSDK/Shrek2TestMod/Shrek2TestMod.vcxproj
@@ -166,7 +166,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Entity.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="Vector.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
