--- a/Shrek2ModdingSDK/Shrek2ModManager/Shrek2ModManager.csproj
+++ b/Shrek2ModdingSDK/Shrek2ModManager/Shrek2ModManager.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Utils\Settings.cs" />
     <Compile Include="Utils\SH2WorkshopFileHandler.cs" />
     <Compile Include="Utils\Shrek2Colors.cs" />
+    <Compile Include="Utils\Shrek2Config.cs" />
     <Compile Include="Utils\ZipArchiveExtensions.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
