--- a/Shrek2ModdingSDK/Shrek2ModdingSDK/Shrek2ModdingSDK.vcxproj.filters
+++ b/Shrek2ModdingSDK/Shrek2ModdingSDK/Shrek2ModdingSDK.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClInclude Include="Shrek2Storage.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Shrek2ModdingSDK2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Shrek2Memory.cpp">
