--- a/Shrek2ModdingSDK/Shrek2ModdingSDK/Shrek2ModdingSDK.vcxproj
+++ b/Shrek2ModdingSDK/Shrek2ModdingSDK/Shrek2ModdingSDK.vcxproj
@@ -173,6 +173,7 @@
     <ClInclude Include="Shrek2EntityModels.h" />
     <ClInclude Include="Shrek2EntityTypes.h" />
     <ClInclude Include="Shrek2Events.h" />
+    <ClInclude Include="Shrek2Inventory.h" />
     <ClInclude Include="Shrek2Storage.h" />
     <ClInclude Include="Shrek2Input.h" />
     <ClInclude Include="Shrek2Maps.h" />
@@ -200,6 +201,7 @@
     <ClCompile Include="Shrek2Config.cpp" />
     <ClCompile Include="Shrek2EntityList.cpp" />
     <ClCompile Include="Shrek2Events.cpp" />
+    <ClCompile Include="Shrek2Inventory.cpp" />
     <ClCompile Include="Shrek2Storage.cpp" />
     <ClCompile Include="Shrek2Input.cpp" />
     <ClCompile Include="Shrek2Maps.cpp" />
